--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 ---
 
 <header>
@@ -77,7 +77,7 @@ import { Icon } from "astro-icon";
         margin-bottom: 75px;
       }
 
-      [astro-icon] {
+      [data-icon] {
         width: 50px;
         vertical-align: bottom;
       }
