--- a/src/pages/posts/[page].astro
+++ b/src/pages/posts/[page].astro
@@ -74,6 +74,7 @@ let uniqueTags = sortedTags.filter(
           href={page.url.next}
           icon="mdi:arrow-forward-circle"
           nofollow={false}
+          flipIcon={true}
         >
           Next
         </Button>
