feat: fix size of svg warning image for old posts

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -45,7 +45,7 @@ const { icon = null, second = false } = Astro.props;
     }
 
     svg {
-      max-width: 50px;
+      width: 70px;
     }
   }
 </style>
