--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,9 +29,9 @@ import MinimalAnalytics from "../components/MinimalAnalytics.astro";
       }}
       extend={{
         meta: [
-          { name: "description", content: { description } },
-          { name: "twitter:title", content: { title } },
-          { name: "twitter:description", content: { description } },
+          { name: "description", content: description },
+          { name: "twitter:title", content: title },
+          { name: "twitter:description", content: description },
         ],
       }}
     />
