--- a/src/pages/posts/[page].astro
+++ b/src/pages/posts/[page].astro
@@ -9,7 +9,7 @@ export async function getStaticPaths({ paginate }) {
     return data.draft !== true;
   });
   const sortedPosts = posts.sort(
-    (post) => Number.MIN_SAFE_INTEGER + post.data.date.getDate()
+    (post) => Number.MIN_SAFE_INTEGER + post.data.date.getDate(),
   );
   return paginate(sortedPosts, {
     pageSize: 5,
@@ -27,7 +27,7 @@ let tagCounts = allTags.reduce((acc, tag) => {
 }, {});
 let sortedTags = allTags.sort((a, b) => tagCounts[b] - tagCounts[a]);
 let uniqueTags = sortedTags.filter(
-  (tag, index) => sortedTags.indexOf(tag) === index
+  (tag, index) => sortedTags.indexOf(tag) === index,
 );
 ---
 
@@ -120,10 +120,10 @@ let uniqueTags = sortedTags.filter(
     if (document.querySelector("#search").value == "") {
       document.querySelector("#posts").innerHTML = original;
       if (next != null) {
-        next.style.display = "block";
+        next.style.display = "inline-block";
       }
       if (prev != null) {
-        prev.style.display = "block ";
+        prev.style.display = "inline-block";
       }
     } else {
       document.querySelector("#posts").innerHTML = "";
