fix: update colors and search light themed

--- a/src/pages/posts/[page].astro
+++ b/src/pages/posts/[page].astro
@@ -100,8 +100,8 @@ let uniqueTags = sortedTags.filter(
     font-family: $template-default-font;
     border: 3px solid $template-color-accent;
     border-radius: 10px;
-    background-color: #252627;
-    color: #fff;
+    background-color: $template-color;
+    color: $template-color-opposing;
   }
 </style>
 
