--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -4,7 +4,7 @@ import { Icon } from "astro-icon/components";
 export interface Props {
   id?: string;
   href: string;
-  icon: string;
+  icon?: string;
   nofollow?: boolean;
   flipIcon?: boolean;
 }
