fix:  descriptions not working

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -5,7 +5,7 @@ import Quote from "../components/Quote.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="404 | Gerben Veenhof">
+<Layout title="404 | Gerben Veenhof" description="Oh no, this page doesn't exist. Please go to the homepage.">
   <div class="error center-text">
     <h1>404 - Page has not been found</h1>
     <p>But have a quote instead:</p>
