--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -11,7 +11,7 @@ const sortedWorks = works.sort((first, second) =>
 );
 ---
 
-<Layout title="Works | Gerben Veenhof">
+<Layout title="Works | Gerben Veenhof" description="These are all my proud works that I have build in my spare time.">
   <h1 class="center-text">My Proud Works 👑</h1>
   <div class="works">
     {
