--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 export interface Props {
   title: string;
-  description?: string;
+  description: string;
 }
 
 const { title, description } = Astro.props;
@@ -20,8 +20,6 @@ import MinimalAnalytics from "../components/MinimalAnalytics.astro";
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <meta name="description" content={description} />
-    <title>{title}</title>
     <SEO
       title={title}
       description={description}
