--- a/src/pages/works/[...slug].astro
+++ b/src/pages/works/[...slug].astro
@@ -14,7 +14,7 @@ const { entry } = Astro.props;
 const { Content } = await entry.render();
 ---
 
-<Layout title={entry.data.title + " | Gerben Veenhof"}>
+<Layout title={entry.data.title + " | Gerben Veenhof"} description={entry.data.description}>
   <h1>{entry.data.title}</h1>
   {entry.data.tags.map((tag) => <Label>{tag}</Label>)}
   <Content />
