--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -48,6 +48,7 @@ import { Icon } from "astro-icon/components";
     if (theme == "light") {
       localStorage.setItem("theme", "light");
       document.body.classList.add("light");
+      document.body.classList.remove("dark");
       document.getElementById("toggle-icon-light").style.display = "block";
       document.getElementById("toggle-icon-dark").style.display = "none";
       if(wsb != undefined) {
@@ -55,6 +56,7 @@ import { Icon } from "astro-icon/components";
       }
     } else {
       localStorage.setItem("theme", "dark");
+      document.body.classList.add("dark");
       document.body.classList.remove("light");
       document.getElementById("toggle-icon-light").style.display = "none";
       document.getElementById("toggle-icon-dark").style.display = "block";
