--- a/src/styles/_defaults.scss
+++ b/src/styles/_defaults.scss
@@ -16,6 +16,19 @@ main {
   margin: 0 auto;
 }
 
+
+body.dark .astro-code,
+body.dark .astro-code span {
+  color: var(--shiki-dark) !important;
+  background-color: var(--shiki-dark-bg) !important;
+}
+
+:not(pre) > code {
+  background: $template-color-code-block;
+  padding: 1px 3px;
+  border-radius: 5px;
+}
+
 a {
   color: $template-color-accent;
 
@@ -57,12 +70,10 @@ h6 {
 
     &:hover::before {
       text-decoration: none;
-      content: '\f0c1';
+      content: "\f0c1";
     }
   }
 }
-
-
 
 .center-text {
   text-align: center;
