ci: add pnpm and change pnpm in the pipeline

--- a/src/pages/posts/[tag]/[page].astro
+++ b/src/pages/posts/[tag]/[page].astro
@@ -6,7 +6,7 @@ import Layout from "../../../layouts/Layout.astro";
 
 export async function getStaticPaths({ paginate }) {
   const posts = await getCollection("posts", ({ data }) => {
-    return data.draft !== true;
+    return data.draft != true;
   });
 
   const allTags = new Set(
