--- a/src/pages/posts/[page].astro
+++ b/src/pages/posts/[page].astro
@@ -18,7 +18,7 @@ export async function getStaticPaths({ paginate }) {
 
 const { page } = Astro.props;
 const posts = await getCollection("posts", ({ data }) => {
-  return data.draft !== true;
+  return data.draft != true;
 });
 const allTags = posts.flatMap((p) => p.data.tags);
 let tagCounts = allTags.reduce((acc, tag) => {
