feat: add prettier formatting

--- a/src/components/Glide.astro
+++ b/src/components/Glide.astro
@@ -12,53 +12,26 @@ import Scrapyard from "../assets/images/works/scrapyard.png";
   <div data-glide-el="track" class="glide__track">
     <ul class="glide__slides">
       <li class="glide__slide">
-        <a
-          href="/works/korfbal_trainer/"
-        >
-          <Image
-            src={KorfbalTrainer}
-            alt="Korfbal Trainer"
-            format="avif"
-          />
+        <a href="/works/korfbal_trainer/">
+          <Image src={KorfbalTrainer} alt="Korfbal Trainer" format="avif" />
           <p>Korfbal Trainer <span>(Javascript)</span></p>
         </a>
       </li>
       <li class="glide__slide">
-        <a
-         
-          href="/works/keydungeon/"
-        >
-          <Image
-            src={Keydungeon}
-            alt="Keydungeon"
-            format="avif"
-          />
+        <a href="/works/keydungeon/">
+          <Image src={Keydungeon} alt="Keydungeon" format="avif" />
           <p>Keydungeon <span>(PHP)</span></p>
         </a>
       </li>
       <li class="glide__slide">
-        <a
-         
-          href="/works/aq3d_bot/"
-        >
-          <Image
-            src={AQ3D}
-            alt="AQ3D Bot"
-            format="avif"
-          />
+        <a href="/works/aq3d_bot/">
+          <Image src={AQ3D} alt="AQ3D Bot" format="avif" />
           <p>AQ3D Bot <span>(Java)</span></p>
         </a>
       </li>
       <li class="glide__slide">
-        <a
-         
-          href="/works/scrapyard/"
-        >
-          <Image
-            src={Scrapyard}
-            alt="Scrapyard Mod"
-            format="avif"
-          />
+        <a href="/works/scrapyard/">
+          <Image src={Scrapyard} alt="Scrapyard Mod" format="avif" />
           <p>Scrapyard Mod <span>(Java)</span></p>
         </a>
       </li>
