--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,18 +1,20 @@
 @font-face {
-  font-family: 'GeneralSans-Regular';
-  src: url('/src/assets/fonts/GeneralSans-Regular.woff2') format('woff2'),
-    url('/src/assets/fonts/GeneralSans-Regular.woff') format('woff'),
-    url('/src/assets/fonts/GeneralSans-Regular.ttf') format('truetype');
+  font-family: "GeneralSans-Regular";
+  src:
+    url("/src/assets/fonts/GeneralSans-Regular.woff2") format("woff2"),
+    url("/src/assets/fonts/GeneralSans-Regular.woff") format("woff"),
+    url("/src/assets/fonts/GeneralSans-Regular.ttf") format("truetype");
   font-weight: 400;
   font-display: swap;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'GeneralSans-Bold';
-  src: url('/src/assets/fonts/GeneralSans-Bold.woff2') format('woff2'),
-    url('/src/assets/fonts/GeneralSans-Bold.woff') format('woff'),
-    url('/src/assets/fonts/GeneralSans-Bold.ttf') format('truetype');
+  font-family: "GeneralSans-Bold";
+  src:
+    url("/src/assets/fonts/GeneralSans-Bold.woff2") format("woff2"),
+    url("/src/assets/fonts/GeneralSans-Bold.woff") format("woff"),
+    url("/src/assets/fonts/GeneralSans-Bold.ttf") format("truetype");
   font-weight: 600;
   font-display: swap;
   font-style: normal;
