--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,10 +11,9 @@ import { SEO } from "astro-seo";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import MinimalAnalytics from "../components/MinimalAnalytics.astro";
-
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -41,42 +40,46 @@ import MinimalAnalytics from "../components/MinimalAnalytics.astro";
       <slot />
       <Footer />
     </main>
-  </body>
+  </body><script is:inline>
+    function randomFromArray(inputArray) {
+      return inputArray[Math.floor(Math.random() * inputArray.length)];
+    }
+
+    function getRandomColor() {
+      return randomFromArray(["orange", "purple", "cyan", "green", "blue"]);
+    }
+
+    function setColor(color) {
+      const body = document.querySelector("body");
+      body.classList.remove(localStorage.getItem("color"));
+      body.classList.add(color);
+      localStorage.setItem("color", color);
+    }
+
+    const pageAccessedByReload = window.performance
+      .getEntriesByType("navigation")
+      .map((navigation) => navigation.type)
+      .includes("reload");
+    if (pageAccessedByReload) {
+      localStorage.removeItem("color");
+    }
+
+    setColor(
+      localStorage.getItem("color") != undefined
+        ? localStorage.getItem("color")
+        : getRandomColor(),
+    );
+  </script>
+  <script
+    type="text/partytown"
+    src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js"
+    defer></script>
+
+  <MinimalAnalytics id="G-01E73RLVK8" />
+
+  <style is:global lang="scss">
+    main {
+      // this is a hack so that the globals.scss file is getting loaded in all components
+    }
+  </style>
 </html>
-
-<script is:inline>
-  function randomFromArray(inputArray) {
-    return inputArray[Math.floor(Math.random() * inputArray.length)];
-  }
-
-  function getRandomColor() {
-    return randomFromArray(["orange", "purple", "cyan", "green", "blue"]);
-  }
-
-  function setColor(color) {
-    const body = document.querySelector("body");
-    body.classList.remove(localStorage.getItem("color"));
-    body.classList.add(color);
-    localStorage.setItem("color", color);
-  }
-
-  const pageAccessedByReload = window.performance
-    .getEntriesByType("navigation")
-    .map((navigation) => navigation.type)
-    .includes("reload");
-  if (pageAccessedByReload) {
-    localStorage.removeItem("color");
-  }
-  
-  setColor(localStorage.getItem("color") != undefined ? localStorage.getItem("color") : getRandomColor());
-</script>
-<script type="text/partytown" src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer
-></script>
-
-<MinimalAnalytics id="G-01E73RLVK8" />
-
-<style is:global lang="scss">
-  main {
-    // this is a hack so that the globals.scss file is getting loaded in all components
-  }
-</style>
