--- a/src/pages/posts/[page].astro
+++ b/src/pages/posts/[page].astro
@@ -31,7 +31,10 @@ let uniqueTags = sortedTags.filter(
 );
 ---
 
-<Layout title="Posts | Gerben Veenhof" description="Read all my posts that I have ever writen.">
+<Layout
+  title="Posts | Gerben Veenhof"
+  description="Read all my posts that I have ever writen."
+>
   <h1 class="center-text">My Posts Collection 📝</h1>
   <div class="tags">
     {
