--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -7,11 +7,14 @@ const works = await getCollection("works", ({ data }) => {
   return data.draft !== true;
 });
 const sortedWorks = works.sort((first, second) =>
-  first.data.order > second.data.order ? 1 : -1
+  first.data.order > second.data.order ? 1 : -1,
 );
 ---
 
-<Layout title="Works | Gerben Veenhof" description="These are all my proud works that I have build in my spare time.">
+<Layout
+  title="Works | Gerben Veenhof"
+  description="These are all my proud works that I have build in my spare time."
+>
   <h1 class="center-text">My Proud Works 👑</h1>
   <div class="works">
     {
