--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -22,7 +22,7 @@ import { Icon } from "astro-icon/components";
         aria-label="Opens my Github page in a new tab"
       >
         <Icon
-          name="ant-design:github-filled"
+          name="mdi:github"
           title="My Github page"
           aria-label="My Github page"
         />
@@ -33,7 +33,7 @@ import { Icon } from "astro-icon/components";
         aria-label="Opens my LinkedIn page in a new tab"
       >
         <Icon
-          name="simple-icons:linkedin"
+          name="mdi:linkedin"
           title="My LinkedIn page"
           aria-label="My LinkedIn page"
         />
@@ -149,7 +149,7 @@ import { Icon } from "astro-icon/components";
 
       [data-icon] {
         width: 25px;
-        vertical-align: bottom;
+        vertical-align: text-bottom;
         color: $template-color-accent;
         fill: $template-color-accent;
       }
