--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -4,7 +4,8 @@ import { getCollection } from "astro:content";
 import Layout from "../layouts/Layout.astro";
 
 const works = await getCollection("works", ({ data }) => {
-  return data.draft !== true;
+  const isDev = import.meta.env.DEV;
+  return data.draft !== true || isDev;
 });
 const sortedWorks = works.sort((first, second) =>
   first.data.order > second.data.order ? 1 : -1,
