--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,11 +8,10 @@ import { Icon } from "astro-icon/components";
   <h2>Want more info about me?</h2>
   <p>
     Sent me a message though one of the following socials or check my work
-    experience on my
-    <a href="https://www.linkedin.com/in/gerbenveenhof/" target="_blank">
-      LinkedIn
-    </a>
-    page.
+    experience on my <a
+      href="https://www.linkedin.com/in/gerbenveenhof/"
+      target="_blank">LinkedIn</a
+    > page.
   </p>
   <div class="center-text">
     <div class="social-media">
