--- a/src/components/Glide.astro
+++ b/src/components/Glide.astro
@@ -1,5 +1,4 @@
 ---
-import "@glidejs/glide/src/assets/sass/glide.core.scss";
 import { Image } from "astro:assets";
 
 import KorfbalTrainer from "../assets/images/works/korfbal_trainer.png";
@@ -56,7 +55,7 @@ import Scrapyard from "../assets/images/works/scrapyard.png";
 </script>
 
 <style lang="scss">
-  @import "@glidejs/glide/src/assets/sass/glide.core.scss";
+  @forward "@glidejs/glide/dist/css/glide.core.min.css";
 
   .glide {
     margin: 75px 0;
