--- a/src/styles/_defaults.scss
+++ b/src/styles/_defaults.scss
@@ -142,3 +142,16 @@ pre {
   border-color: $template-color-accent !important;
   color: $template-color !important;
 }
+
+kbd {
+  display: inline-block;
+  padding: 4px;
+  font-size: 14px;
+  color: $template-color-accent !important;
+  vertical-align: middle;
+  background-color: $template-color !important;
+  border: solid 1px $template-color-accent !important;
+  border-bottom-color: $template-color-accent !important;
+  border-radius: 6px;
+  box-shadow: inset 0 -1px 0 $template-color-accent !important;
+}
